Fix logo spacing, update internal max width, animated blocks off logo, animate logo block on hover

--- a/source/stylesheets/layout/_header.scss
+++ b/source/stylesheets/layout/_header.scss
@@ -1,5 +1,5 @@
 header {
-  padding: 5% 30px;
+  padding: 5% 30px 12%;
   display:flex;
   justify-content: space-between;
   flex-direction:column;
@@ -38,9 +38,10 @@ header {
     position:relative;
     margin-top: 19.7%;
     margin-bottom: 18%;
-    padding: 30px 0;
-    padding-top: 19.7%;
-    padding-bottom: 18%;
+    padding:0;
+    //padding: 30px 0;
+    //padding-top: 19.7%;
+    //padding-bottom: 18%;
     height: 110px;
     max-width:100%;
 
@@ -65,7 +66,9 @@ header {
 
       a {
         color: #000;
-        font-size: 1.42857142857143em; // 20px
+        font-size: 1.125em;
+        display: flex;
+        align-items: center;
 
         &:hover, &:focus {
           color: $burnt-sienna;
@@ -79,6 +82,7 @@ header {
 
         .sm-icon {
           padding-left:10px;
+          height:30px;
         }
       }
 
@@ -162,10 +166,10 @@ header {
   }
 }
 
-.wf-active {
+
   .logo .line {
   	@include animation(dash 10s linear forwards);
   }
-}
+
 
 // ------
